--- a/resources.html
+++ b/resources.html
@@ -56,40 +56,19 @@
     <div class="main">
         <div class="area">
             <div class="posthead">
-                <h2 class="headers posth2">Welcome ♡</h2>
+                <h2 class="headers posth2">Help ♡</h2>
             </div>
             <div class="postcontent">
-                <p>Welcome to my little corner of the internet. Here I share my hobbies, projects, mods and creations 🌸. Feel free to look around and leave a message ⋆.˚ This is a work in progress.</p>
+                <p>Here you will find links to websites and organizations that provide support and resources for those in need. -`♡´-</p>
             </div>
         </div>
 
         <div class="area">
             <div class="posthead">
-                <h2 class="headers posth2">Updates</h2>
+                <h2 class="headers posth2">Web Resources</h2>
             </div>
             <div class="postcontent">
-                <ul>
-                    <li>Home section updated</li>
-                    <li>Added Resources section</li> 
-                    <li>Added Portfolio section</li> 
-                    <li>Added Virtual Assistance link</li>           
-                </ul>
-            </div>
-        </div>
-
-        <div class="area">
-            <div class="posthead">
-                <h2 class="headers posth2">To Do</h2>
-            </div>
-            <div class="postcontent">
-                <ul>
-                    <li>Add more pixels to pixel art gallery</li>
-                    <li>Add Modding section</li>
-                    <li>Add Contact section</li>
-                    <li>Create blog posts</li>    
-                    <li>Add more blinkies and stamps</li>
-                    <li>Add pet</li>       
-                </ul>
+                <p>Here you will find links that I used to create this website. ૮ ˶ᵔ ᵕ ᵔ˶ ა</p>             
             </div>
         </div>
 
