--- a/adoptions.html
+++ b/adoptions.html
@@ -57,12 +57,40 @@
     <div class="main">
         <div class="area">
             <div class="posthead">
-                <h2 class="headers posth2">Welcome ♡</h2>
+                <h2 class="headers posth2">Blinkies ˗ˏˋ ★ ˎˊ˗</h2>
             </div>
             <div class="postcontent">
-                <p>Welcome to my little corner of the internet. Here I share my hobbies, projects, mods and creations 🌸. Feel free to look around and leave a message ⋆.˚ This is a work in progress.</p>
+               <section class="blinkies-section">
+    <div class="blinkies-grid">
+        <!-- Blinkies -->
+        <img src="blinkies/blinkie1.gif" alt="blinkie1">
+        <img src="blinkies/blinkie2.gif" alt="blinkie2">
+        <img src="blinkies/blinkie3.gif" alt="blinkie3">
+        <!-- Agrega más aquí -->
+    </div>
+</section>
+
             </div>
         </div>
+
+        <div class="area">
+            <div class="posthead">
+                <h2 class="headers posth2">Stamps 𐔌՞ ܸ.ˬ.ܸ՞𐦯</h2>
+            </div>
+            <div class="postcontent">
+               <section class="blinkies-section">
+    <div class="stamps-grid">
+        <!-- Blinkies -->
+        <img src="blinkies/blinkie1.gif" alt="blinkie1">
+        <img src="blinkies/blinkie2.gif" alt="blinkie2">
+        <img src="blinkies/blinkie3.gif" alt="blinkie3">
+        <!-- Agrega más aquí -->
+    </div>
+</section>
+
+            </div>
+        </div>
+
 
         <div class="chibi-area">
     <img src="chibi.png" alt="chibi" class="chibi" onclick="showRandomGift()">
