--- a/blog.html
+++ b/blog.html
@@ -55,14 +55,21 @@
     </div>
 
     <div class="main">
-        <div class="area">
-            <div class="posthead">
-                <h2 class="headers posth2">Welcome ♡</h2>
-            </div>
-            <div class="postcontent">
-                <p>Welcome to my little corner of the internet. Here I share my hobbies, projects, mods and creations 🌸. Feel free to look around and leave a message ⋆.˚ This is a work in progress.</p>
-            </div>
-        </div>
+
+        <h1 class="page-title">Blog ✩₊˚.⋆☾⋆⁺₊✧</h1>
+
+<div class="blog-grid">
+
+    <!-- POST 1 CARD -->
+   
+   <!--  <a href="post1.html" class="blog-card">
+        <img src="preview1.png" alt="preview" class="blog-thumb">
+        <h2 class="blog-card-title">Learning 3D Modeling ✿</h2>
+        <p class="blog-card-date">📅 23 November 2025</p>
+    </a> -->
+
+</div>
+
 
         <div class="chibi-area">
     <img src="chibi.png" alt="chibi" class="chibi" onclick="showRandomGift()">
