--- a/contact.html
+++ b/contact.html
@@ -55,14 +55,35 @@
     </div>
 
     <div class="main">
-        <div class="area">
-            <div class="posthead">
-                <h2 class="headers posth2">Welcome ♡</h2>
-            </div>
-            <div class="postcontent">
-                <p>Welcome to my little corner of the internet. Here I share my hobbies, projects, mods and creations 🌸. Feel free to look around and leave a message ⋆.˚ This is a work in progress.</p>
-            </div>
+
+        <!-- CONTACT SECTION -->
+<section id="contact" class="contact-section fade-in">
+
+    <h2 class="section-title">Contact Me ₊✩‧₊˚౨ৎ˚₊✩‧₊</h2>
+
+    <div class="contact-grid">
+
+        <!-- FORMULARIO -->
+        <div class="contact-form card">
+            <form action="https://formspree.io/f/xpwopaez" method="POST">
+
+                <textarea id="message" name="message" placeholder="Write your message here…"></textarea>
+
+                <button class="btn-send" type="submit">Send Message</button>
+
+                <p id="form-feedback" class="feedback"></p>
+            </form>
         </div>
+
+        <!-- INFORMACIÓN DE CONTACTO -->
+        <aside class="contact-info card-light">
+            <p><strong>Contact:</strong></p>
+            <p>Email: <a href="mailto:reggina.murrieta@gmail.com">reggina.murrieta@gmail.com</a></p>
+            <p>Discord: <span>regga6388</span></p>
+        </aside>
+
+    </div>
+</section>
 
         <div class="chibi-area">
     <img src="chibi.png" alt="chibi" class="chibi" onclick="showRandomGift()">
