--- a/mods.html
+++ b/mods.html
@@ -34,7 +34,7 @@
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
-            <a href="adoptions.html">Adoptions</a>
+             <a href="adoptions.html">Adoptions</a>
             <a href="https://reggamb.github.io/website-landing-page">Virtual Assistance</a>
         </nav>
 
@@ -57,12 +57,26 @@
     <div class="main">
         <div class="area">
             <div class="posthead">
-                <h2 class="headers posth2">Welcome ♡</h2>
+                <h2 class="headers posth2">Modding</h2>
             </div>
             <div class="postcontent">
-                <p>Welcome to my little corner of the internet. Here I share my hobbies, projects, mods and creations 🌸. Feel free to look around and leave a message ⋆.˚ This is a work in progress.</p>
+                <p>I have recently started learning how to create mods for one of my favorite games, Project Zomboid. It's been a fun experience so far, and I'm excited to share my progress. I'm so excited to continue improving and creating new content, and to create mods for other games I love.</p>
             </div>
         </div>
+
+        <div class="gallery">
+    
+    <a class="mod-card" href="mod1.html">
+        <img src="abuelitalinda.png" alt="Mod 1" style="width: auto; height: auto;">
+        <h3>Abuelita Linda (In development)</h3>
+    </a>
+
+     <a class="mod-card" href="mod2.html">
+        <img src="morecoffee.png" alt="Mod 1" style="width: auto; height: auto;">
+        <h3>More Coffee! (Upcoming)</h3>
+    </a>
+
+</div>
 
         <div class="chibi-area">
     <img src="chibi.png" alt="chibi" class="chibi" onclick="showRandomGift()">
