--- a/portfolio.html
+++ b/portfolio.html
@@ -34,6 +34,7 @@
             <a href="portfolio.html">Portfolio</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
+            <a href="adoptions.html">Adoptions</a>
             <a href="https://reggamb.github.io/website-landing-page">Virtual Assistance</a>
         </nav>
 
@@ -59,7 +60,7 @@
                 <h2 class="headers posth2">Pixels</h2>
             </div>
             <div class="postcontent">
-                <p>Feel free to explore my pixel art creations and projects. Grab anything you like! Everything was made by me with love and care using <a class="inline-link" href="https://www.aseprite.org">Aseprite</a> ⸜(｡˃ ᵕ ˂ )⸝♡ It is a new thing for me, so I'm still learning ~</p>
+                <p>Feel free to explore my pixel art creations and projects. Grab anything you like! Everything was made by me using <a class="inline-link" href="https://www.aseprite.org">Aseprite</a> ⸜(｡˃ ᵕ ˂ )⸝♡ It is a new thing for me, so I'm still learning ~</p>
                 <!-- Galería de pixel art -->
                 <div class="pixel-gallery">
 
@@ -86,7 +87,38 @@
                   <figure class="pixel-card">
                     <img src="strawberry.png" alt="Strawberry pixel art" class="pixel-thumb"> 
                 </figure>  
-                
+
+                <figure class="pixel-card">
+                    <img src="pixels/cat.png" alt="Cat pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                <figure class="pixel-card">
+                    <img src="pixels/duck.png" alt="Duck pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                <figure class="pixel-card">
+                    <img src="pixels/heart.png" alt="Heart pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                <figure class="pixel-card">
+                    <img src="pixels/muffin.png" alt="Muffin pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                 <figure class="pixel-card">
+                    <img src="pixels/popsicle.png" alt="Popsicle pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                 <figure class="pixel-card">
+                    <img src="pixels/rock.png" alt="Rock pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                 <figure class="pixel-card">
+                    <img src="pixels/shroom.png" alt="Shroom pixel art" class="pixel-thumb"> 
+                </figure>  
+
+                 <figure class="pixel-card">
+                    <img src="pixels/tree.png" alt="Tree pixel art" class="pixel-thumb"> 
+                </figure>  
 
                 </div>
 
@@ -102,8 +134,6 @@
     </div>
         </div>
 </div>
-
-<script id="cid0020000424843830970" data-cfasync="false" async src="//st.chatango.com/js/gz/emb.js" style="width: 361px;height: 200px;">{"handle":"reggachat","arch":"js","styles":{"a":"ffcccc","b":100,"c":"000000","d":"000000","k":"ffcccc","l":"ffcccc","m":"ffcccc","p":"10","q":"ffcccc","r":100,"cnrs":"0.35","fwtickm":1}}</script>
 
 <script>
     
