update blog and mod1

--- a/blog.html
+++ b/blog.html
@@ -62,11 +62,11 @@
 
     <!-- POST 1 CARD -->
    
-   <!--  <a href="post1.html" class="blog-card">
-        <img src="preview1.png" alt="preview" class="blog-thumb">
+    <a href="post1.html" class="blog-card">
+        <img src="preview1.jpg" alt="preview" class="blog-thumb">
         <h2 class="blog-card-title">Learning 3D Modeling ✿</h2>
-        <p class="blog-card-date">📅 23 November 2025</p>
-    </a> -->
+        <p class="blog-card-date">27 November 2025</p>
+    </a>
 
 </div>
 
