--- a/mod1.html
+++ b/mod1.html
@@ -28,12 +28,34 @@
 
         <!-- POST 1 -->
         <div class="update-post">
-            <p class="update-date">📅 23 November 2025</p>
+            <p class="update-date">23 November 2025</p>
             <h3 class="update-header">First Progress</h3>
             <p class="update-text">
                 So far I've added several new items such as candies and drinks. It's been a slow but steady progress. Looking forward to adding more recipes soon! Here is a little sneak peek of the new items added so far.
             </p>
             <img src="update1mod1.png" alt="Update Image" class="update-image">
+        </div>
+
+        <!-- POST 2 -->
+        <div class="update-post">
+            <p class="update-date">27 November 2025</p>
+            <h3 class="update-header">Second Progress</h3>
+            <p class="update-text">
+                Desserts added! Now you can make flan, <i>pan de muerto</i>, churros, and more! Can't wait to add more meals and finally share it with everyone ֶָ֢𖹭 I've been thinking maybe it might be a good idea to make a wiki page for the mod. I might start developing it once it is complete! Now on to the main dishes.
+                Desserts added:
+                <ul>
+                    <li>Flan napolitano</li>
+                    <li>Pan de muerto</li>
+                    <li>Churros</li>
+                    <li>Arroz con leche</li>
+                    <li>Buñuelos</li>
+                    <li>Pan de nata</li>
+                    <li>Capirotada</li>
+                    <li>Pan dulce</li>
+                    <li>Coyotas</li>
+                </ul>
+            </p>
+            <img src="update2mod1.jpg" alt="Update Image" class="update-image">
         </div>
 
     </div>
