--- a/mod1.html
+++ b/mod1.html
@@ -29,7 +29,7 @@
         <!-- POST 1 -->
         <div class="update-post">
             <p class="update-date">23 November 2025</p>
-            <h3 class="update-header">First Progress</h3>
+            <h3 class="update-header">Items and more items</h3>
             <p class="update-text">
                 So far I've added several new items such as candies and drinks. It's been a slow but steady progress. Looking forward to adding more recipes soon! Here is a little sneak peek of the new items added so far.
             </p>
@@ -39,7 +39,7 @@
         <!-- POST 2 -->
         <div class="update-post">
             <p class="update-date">27 November 2025</p>
-            <h3 class="update-header">Second Progress</h3>
+            <h3 class="update-header">Desserts</h3>
             <p class="update-text">
                 Desserts added! Now you can make flan, <i>pan de muerto</i>, churros, and more! Can't wait to add more meals and finally share it with everyone ֶָ֢𖹭 I've been thinking maybe it might be a good idea to make a wiki page for the mod. I might start developing it once it is complete! Now on to the main dishes.
                 Desserts added:
@@ -57,6 +57,29 @@
             </p>
             <img src="update2mod1.jpg" alt="Update Image" class="update-image">
         </div>
+
+         <!-- POST 3 -->
+        <div class="update-post">
+            <p class="update-date">4 December 2025</p>
+            <h3 class="update-header">Volume 1</h3>
+            <p class="update-text">
+                First main dishes added! The mod is coming together nicely. These will be added to the first book of recipes, which means these are <i>easy</i> recipes. Might add more to this volume in the future. Next up, more main dishes and some soups!
+                Main dishes added:
+                <ul>
+                    <li>Salsa roja</li>
+                    <li>Salsa verde</li>
+                    <li>Chilquiles rojos</li>
+                    <li>Chilquiles verdes</li>
+                    <li>Enchiladas rojas</li>
+                    <li>Enchiladas suizas</li>
+                    <li>Coctel de elote</li>
+                    <li>Caldo Tlalpeño</li>
+                    <li>Frijoles charros</li> 
+                </ul>
+            </p>
+            <img src="update3mod1.png" alt="Update Image" class="update-image">
+        </div>
+
 
     </div>
 
