modify colors and add downloads

--- a/adoptions.html
+++ b/adoptions.html
@@ -32,6 +32,7 @@
             <a href="blog.html">Blog</a>
             <a href="mods.html">Modding</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="downloads.html">Downloads</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
             <a href="adoptions.html">Adoptions</a>
@@ -63,9 +64,7 @@
                <section class="blinkies-section">
     <div class="blinkies-grid">
         <!-- Blinkies -->
-        <img src="blinkies/blinkie1.gif" alt="blinkie1">
-        <img src="blinkies/blinkie2.gif" alt="blinkie2">
-        <img src="blinkies/blinkie3.gif" alt="blinkie3">
+        
         <!-- Agrega más aquí -->
     </div>
 </section>
@@ -81,9 +80,7 @@
                <section class="blinkies-section">
     <div class="stamps-grid">
         <!-- Blinkies -->
-        <img src="blinkies/blinkie1.gif" alt="blinkie1">
-        <img src="blinkies/blinkie2.gif" alt="blinkie2">
-        <img src="blinkies/blinkie3.gif" alt="blinkie3">
+
         <!-- Agrega más aquí -->
     </div>
 </section>
