--- a/mods.html
+++ b/mods.html
@@ -32,6 +32,7 @@
             <a href="blog.html">Blog</a>
             <a href="mods.html">Modding</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="downloads.html">Downloads</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
              <a href="adoptions.html">Adoptions</a>
@@ -71,7 +72,7 @@
         <h3>Abuelita Linda (In development)</h3>
     </a>
 
-     <a class="mod-card" href="mod2.html">
+     <a class="mod-card" href="#">
         <img src="morecoffee.png" alt="Mod 1" style="width: auto; height: auto;">
         <h3>More Coffee! (Upcoming)</h3>
     </a>
