--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <a href="blog.html">Blog</a>
             <a href="mods.html">Modding</a>
             <a href="portfolio.html">Portfolio</a>
+            <a href="downloads.html">Downloads</a>
             <a href="contact.html">Contact</a>
             <a href="resources.html">Resources</a>
             <a href="adoptions.html">Adoptions</a>
