--- a/mod1.html
+++ b/mod1.html
@@ -80,6 +80,26 @@
             <img src="update3mod1.png" alt="Update Image" class="update-image">
         </div>
 
+         <!-- POST 4 -->
+        <div class="update-post">
+            <p class="update-date">7 December 2025</p>
+            <h3 class="update-header">Volume 2</h3>
+            <p class="update-text">
+                Second volume finished 💪 I'm working really hard to finish it as soon as possible. I just want to share it already with everyone cx This mod will be in English and Spanish, but of course, if there is anyone who would like to translate it to their language, they would absolutely be free to do so. These are the recipes added:
+                <ul>
+                    <li>Fajitas de pollo</li>
+                    <li>Fajitas de res</li>
+                    <li>Caldo de queso</li>
+                    <li>Carne con chile</li>
+                    <li>Mole</li>
+                    <li>Tacos dorados</li>
+                    <li>Cochinita pibil</li>
+                    <li>Sopes</li>
+                    <li>Gorditas</li>
+                </ul>
+            </p>
+            <img src="update4mod1.png" alt="Update Image" class="update-image">
+        </div>
 
     </div>
 
