--- a/mod1.html
+++ b/mod1.html
@@ -101,6 +101,22 @@
             <img src="update4mod1.png" alt="Update Image" class="update-image">
         </div>
 
+         <!-- POST 5 -->
+        <div class="update-post">
+            <p class="update-date">9 December 2025</p>
+            <h3 class="update-header">Volume 3</h3>
+            <p class="update-text">
+               Last volume done! Though I have planned to create an extra magazine, specifically for tamales. This mod is getting closer to completion cx Here are the recipes added in this volume:
+                <ul>
+                    <li>Pozole</li>
+                    <li>Menudo</li>
+                    <li>Gallina Pinta</li>
+                    <li>Chiles Rellenos</li>
+                    <li>Chivichangas</li>
+                </ul>
+            </p>
+            <img src="update5mod1.png" alt="Update Image" class="update-image">
+        </div>
     </div>
 
 </div>
