post mod upload

--- a/mod1.html
+++ b/mod1.html
@@ -13,9 +13,9 @@
 
 <div class="mod-container">
 
-    <h1 class="mod-title">Abuelita Linda ⟡🍽️₊˚⊹♡</h1>
+    <h1 class="mod-title">Abuelita Linda ⟡🍽️₊˚⊹♡ (Click image)</h1>
 
-    <img src="abuelitalinda.png" class="mod-preview" alt="Abuelita Linda">
+   <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3622474939"><img src="abuelitalinda.png" class="mod-preview" alt="Abuelita Linda"></a>
 
     <p class="mod-description">
         This mod adds lots of new Mexican foods and recipes to Project Zomboid, inspired by traditional home-cooked meals. Enjoy dishes like tamales, pozole, chiles rellenos, and more! In development...
@@ -119,6 +119,15 @@
         </div>
     </div>
 
+    <!-- POST 5 -->
+        <div class="update-post">
+            <p class="update-date">17 December 2025</p>
+            <h3 class="update-header">It's out!</h3>
+            <p class="update-text">
+               It's finally done and available for download! And also, updated for B42.13! I'm so excited to share this mod with everyone. I hope you all enjoy cooking and trying out these traditional Mexican recipes in Project Zomboid. I really didn't expect a lot of people to subscribe, but the support has been amazing. Thank you so much 🩷 You can check the mod <a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3622474939">here</a> and check the wiki <a href="https://reggamb.github.io/wiki-abuelita-linda/">here</a>.
+            </p> 
+        </div>
+    </div>
 </div>
 
 </body>
