--- a/mods.html
+++ b/mods.html
@@ -69,7 +69,7 @@
     
     <a class="mod-card" href="mod1.html">
         <img src="abuelitalinda.png" alt="Mod 1" style="width: auto; height: auto;">
-        <h3>Abuelita Linda (In development)</h3>
+        <h3>Abuelita Linda</h3>
     </a>
 
      <a class="mod-card" href="#">
